# zac-bn254

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
bench/: baseline.md
crates/zac/: Cargo.toml
crates/zac-cli/: Cargo.toml
crates/zac-cli/src/: commands.rs  main.rs
crates/zac-cli/src/commands/: hash.rs  inspect.rs  pack.rs  prove.rs  verify.rs
crates/zac/benches/: parse_bench.rs  prove_bench.rs  verify_bench.rs
crates/zac/examples/: build_fixtures.rs  forgery_vectors.rs  generate_gold_vectors.rs  hexdump_header.rs  ingest_zkey.rs  negative_cases.rs  prove_from_wtns.rs  round_trip.rs  verify_happy.rs  verify_snarkjs_proof.rs
crates/zac/src/: crc.rs  error.rs  groth16.rs  groth16_prover.rs  hash.rs  header.rs  index.rs  lib.rs  prover.rs  section.rs  trailer.rs  verifier.rs  zac_file.rs  zac_proof.rs
crates/zac/src/iden3/: mod.rs  r1cs.rs  wtns.rs  zkey.rs
crates/zac/tests/: fr_canonical.rs  fuzz_parse.rs  gold_vectors.rs
crates/zac/tests/fixtures/: multiplier.zac  multiplier.zacp
crates/zac/tests/vectors/: corpus.json
crates/zac/tests/vectors/mul-alt-setup/: mul-alt-setup.zac  mul-alt-setup.zacp  vector.json
crates/zac/tests/vectors/mul-default/: mul-default.zacp  vector.json
crates/zac/tests/vectors/mul-z-max/: mul-z-max.zacp  vector.json
crates/zac/tests/vectors/mul-z-zero/: mul-z-zero.zac  mul-z-zero.zacp  vector.json
docs/: CHANGELOG.md  ERROR-CODES.md  SPEC.md
fixtures/: multiplier.r1cs  multiplier.vkey.json  snarkjs_proof.json
node-tools/: package.json
node-tools/scripts/: build_fixtures.mjs  cross_verify.mjs  prove.mjs
sbom/: cargo-audit.json  cargo-geiger-zac-cli.txt  cargo-geiger-zac.txt  zac-cli.cdx.json  zac.cdx.json
scripts/: e2e_demo.sh
