[package]
name         = "zac"
description  = "ZAC — Groth16 BN254 artifact container (v1.0)."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
repository.workspace   = true

[dependencies]
byteorder.workspace     = true
blake3.workspace        = true
ark-bn254.workspace     = true
ark-groth16.workspace   = true
ark-ec.workspace        = true
ark-ff.workspace        = true
ark-poly.workspace      = true
ark-serialize.workspace = true
ark-relations.workspace = true
ark-snark.workspace     = true
ark-std.workspace       = true
rand.workspace          = true
rand_chacha.workspace   = true
thiserror.workspace     = true
tracing.workspace       = true
hex.workspace           = true
crc32fast.workspace     = true

[dev-dependencies]
tracing-subscriber.workspace = true
criterion.workspace          = true
proptest.workspace           = true
anyhow.workspace             = true

[[bench]]
name    = "parse_bench"
harness = false

[[bench]]
name    = "verify_bench"
harness = false

[[bench]]
name    = "prove_bench"
harness = false
